@@ -936,6 +936,22 @@ Info: This package create a privacy breach by fetching some data from
  an external website. Please remove these script or external html 
  ressources.
 
+Tag: privacy-breach-google-adsense
+Severity: serious
+Certainty: possible
+Info: This package create a privacy breach by using Google Adsense.
+ Google Adsense is a program run by Google that allows publishers of
+ content sites to serve automatic advertisement. Unfortunately, it means
+ tracking and breaching privacy of our users.
+ .
+ This tag track also tracks the use of related obsolete privacy breaker 
+ software Urchin WebAnalytics.
+ .
+ Note that using Google Adsense in local webpage copy is a violation
+ of Google Adsense term of use and thus a serious bug. This violation
+ renders not distribuable the whole package.
+
+
 Tag: embedded-feedparser-library
 Severity: normal
 Certainty: certain
