@@ -4,3 +4,4 @@ Version: 1.0
 Description: Check for different html privacy breach
 Test-For:
  privacy-breach-generic
+ privacy-breach-google-adsense
